--- a/test/Microsoft.Extensions.HealthChecks.Test/Microsoft.Extensions.HealthChecks.Test.csproj
+++ b/test/Microsoft.Extensions.HealthChecks.Test/Microsoft.Extensions.HealthChecks.Test.csproj
@@ -13,4 +13,9 @@
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="xunit" Version="2.3.1" />
+    <PackageReference Update="xunit.runner.visualstudio" Version="2.3.1" />
+  </ItemGroup>
+
 </Project>
