--- a/src/Microsoft.AspNetCore.HealthChecks/Microsoft.AspNetCore.HealthChecks.csproj
+++ b/src/Microsoft.AspNetCore.HealthChecks/Microsoft.AspNetCore.HealthChecks.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.0</TargetFramework>
+    <Version>1.2.0</Version>
+    <PackageId>Ancile.Microsoft.AspNetCore.HealthChecks</PackageId>
   </PropertyGroup>
 
   <ItemGroup>
